# arxiv-search

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  =2.20.0  DECISIONS.md  Dockerfile  Dockerfile-agent  Dockerfile-api  Dockerfile-classic-api  Dockerfile-dev  Dockerfile-elasticsearch  Dockerfile-index  Dockerfile-integration-test  Dockerfile-kibana  Dockerfile-metadata  Dockerfile-test  Dockerfile-ui  LICENSE  Makefile  Pipfile  README.md  RELEASE_NOTES.md  TODO  Untitled  ack.json  api.py  app.py  audit.py  bulk_index.py  classic-api.py  create_index.py  default.nix  docker-compose-integration-test.yml  docker-compose.yml  integration_test.sh  lintstats.sh  main.py  mypy.ini  (+13 more)
.github/ISSUE_TEMPLATE/: python-app.yml
.github/workflows/: python-app.yml
agent/: README.md  agent.properties  docker-compose.yml  pre_start_agent.py  run_consumer.py  start_agent.sh  test.properties
api/: search.yaml
config/: uwsgi-api.ini  uwsgi-classic-api.ini
deploy/api/: Chart.yaml  README.md  values.yaml
deploy/classic-api/: Chart.yaml  README.md  values.yaml
docs/: Makefile  architecture.rst  requirements.txt
docs/source/: architecture.rst  classic_api.rst  conf.py  index.rst  migration.rst  search_api.rst  search_ui.rst
docs/ui/: README.md  advanced-query.sketch  search-prototype.sketch  search-workflows.sketch
mappings/: DocumentMapping.json
requirements/: dev.txt  prod.txt  test.txt
schema/: Document.json  DocumentSet.json  Query.json  search-xml.yaml  search.yaml
schema/resources/: AtomXML.yaml  Classification.json  ClassificationTerm.json  Document.json  DocumentMetadata.json  DocumentSet.json  Person.json
search/: __init__.py  config.py  consts.py  context.py  controllers.py  converter.py  converters.py  domain.py  encode.py  errors.py  exceptions.py  factory.py  filters.py  forms.py  logging.py  routes.py  status.py  transform.py  util.py  utils.py
search/agent/: __init__.py  base.py  consumer.py
search/controllers/: __init__.py  simple.py  tests.py  util.py
search/css/: search.css  search.css.map
search/domain/: __init__.py  advanced.py  api.py  author.py  base.py  documents.py
search/process/: __init__.py  query.py  tests.py  transform.py
search/routes/: __init__.py  api.py  consts.py  context_processors.py  external_api.py  ui.py
search/sass/: search.sass
search/serialize/: __init__.py  atom.py  atom_extensions.py  base.py  json.py
search/services/: __init__.py  fulltext.py  index.py  metadata.py  tex.py
search/templates/: ack.html
search/tests/: __init__.py  mocks.py  test_advanced_search.py  test_api.py  test_param_persistence.py  test_searches.py
search/utils/: __init__.py  expires.py  string.py  timestamp.py
tests/: base_app_tests.py  test_advanced_search.py  test_agent.py  test_author_search_ranking.py  test_base_app_tests.py  test_consumer.py  test_controller_advanced.py  test_controller_authors.py  test_controller_simple.py  test_exceptions.py  test_process_query.py  test_services_fulltext.py  test_services_index.py  test_services_index_integration.py  test_services_metadata.py  test_transform.py  test_wsgi.py
tests/data/: 1106.1238v2.json  1709.01849v1.indexable.json  docmeta.json  docmeta_bulk.json  example_access_log  fulltext.json  sample.json  to_index.json
tests/examples/: advanced_search.feature.example  author_search.feature.example  author_search_ranking.py  authors_combined_terms.example  ordering_pagination.feature.example  (+1 more)
ui/: search-wireframes.sketch
(+572 files in other folders)
