[tool.poetry]
name = "arxiv-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "1.0.0a5", extras = []}
bleach = "*"
boto = "*" 
boto3 = "*" 
botocore = "*" 
certifi = "*" 
chardet = "*" 
click = "*" 
dataclasses = "*" 
docutils = "*" 
elasticsearch = "==6.3.0"
elasticsearch-dsl = "==6.4.0"
feedgen = "*" 
flask = ">=2.2,<3.0" 
flask-s3 = "*" 
idna = "*" 
ipaddress = "*" 
itsdangerous = "*" 
jinja2 = "*" 
jmespath = "*" 
jsonschema = "*" 
lark-parser = "*" 
lxml = "*" 
markupsafe = "*" 
mccabe = "*" 
mypy-extensions = "*"
pbr = "*" 
psutil = "*" 
pyjwt = "*" 
pylama = "*" 
python-dateutil = "*" 
pytz = "*" 
requests = "*" 
retry = "*"
s3transfer = "*" 
snowballstemmer = "*" 
thrift = "*" 
thrift-connector = "*" 
urllib3 = "*" 
werkzeug = "*" 
wtforms = "==2.1"


[tool.poetry.group.dev.dependencies]
pycodestyle = "*"
pydocstyle = ">=2.1.1"
mock = "==2.0.0"
#mypy = "==0.720"
#mypy-extensions = "*"
nose2 = "==0.7.3"
coveralls = "*"
#sphinx = "*"
#sphinxcontrib-websupport = "*"
#sphinx-autodoc-typehints = "*"
pylint = "*"
pytest = "*"
nose = "*"
pre-commit = "==2.0.1"
coverage = "==4.4.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
