[tool.poetry]
name = "arxiv-search"
version = "1.0.0"
description = "Search for arxiv.org "
authors = ["arxiv.org"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
boto3 = "*" 
click = "*" 
elasticsearch = "==6.3.0"
elasticsearch-dsl = "==6.4.0"
feedgen = "*" 
flask = ">=2.2,<3.0" 
flask-s3 = "*" 
jsonschema = "*" 
lark-parser = "*" 
lxml = "*" 
markupsafe = "*" 
python-dateutil = "*" 
pytz = "*" 
requests = "*" 
retry = "*"
urllib3 = "*" 
werkzeug = "*" 
wtforms = "==2.1"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "1.0.1"}
mypy-extensions = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "*"
pydocstyle = ">=2.1.1"
mock = "==2.0.0"
#mypy = "==0.720"
#mypy-extensions = "*"
#sphinx = "*"
#sphinxcontrib-websupport = "*"
#sphinx-autodoc-typehints = "*"
pylint = "*"
pytest = "*"
pre-commit = "==2.0.1"
coverage = "==4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
