[tool.poetry]
name = "arxiv-search"
version = "1.0.0"
description = "Search for arxiv.org "
authors = ["arxiv.org"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "*" 
click = "*" 
elasticsearch = "==6.3.0"
elasticsearch-dsl = "==6.4.0"
feedgen = "0.9.0"
flask = ">=2.2,<3.0" 
flask-s3 = "*" 
jsonschema = "*" 
lark-parser = "*" 
lxml = "*" 
markupsafe = "*" 
python-dateutil = "*" 
pytz = "*" 
referencing = "*"
requests = "*" 
retry = "*"
urllib3 = "*" 
#werkzeug = "2.2.3"
werkzeug = "2.3.6"
wtforms = "==2.1"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "1.0.1"}
mypy-extensions = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "*"
pydocstyle = ">=2.1.1"
mock = "==2.0.0"
#mypy = "==0.720"
#mypy-extensions = "*"
#sphinx = "*"
#sphinxcontrib-websupport = "*"
#sphinx-autodoc-typehints = "*"
pylint = "*"
pytest = "*"
pre-commit = "==2.0.1"
coverage = "==4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
